--- a/app/src/main/res/layout/register_dialog.xml
+++ b/app/src/main/res/layout/register_dialog.xml
@@ -1,63 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+android:layout_height="wrap_content"
+app:cardElevation="0dp"
+app:cardCornerRadius="0dp"
+    >
+    <!-- Style pouzi rovnaky ako je pre Builder -->
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="16dp"
-    app:cardCornerRadius="8dp"
+    style="@style/register_card_view"
     >
     <LinearLayout
         android:orientation="vertical"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_margin="16dp"
+        <!-- Content -->
+        <!-- Rengwuxian maretial -->
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/register_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
-            <!-- Content -->
-            <!-- Rengwuxian maretial -->
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/register_name"
-                android:hint="@string/registerName"
-                android:textSize="18sp"
-                android:inputType="text"
-                app:met_floatingLabel="highlight"
-                />
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/register_address"
-                android:hint="@string/registerAddress"
-                android:textSize="18sp"
-                android:inputType="text"
-                app:met_floatingLabel="highlight"
-                />
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/register_datetime"
-                android:hint="@string/registerDateTime"
-                android:textSize="20sp"
-                android:digits="1234567890-"
-                app:met_floatingLabel="highlight"
-                />
-        </LinearLayout>
-        <!-- Continue register Button -->
-        <Button
-            android:id="@+id/button_register_continue"
-            android:text="@string/button_register_continue"
+            android:hint="@string/registerName"
+            android:inputType="text"
+            android:textSize="18sp"
+            app:met_floatingLabel="highlight"
+            app:met_underlineColor="@color/materialEditTextBackground"
+            app:met_baseColor="@color/materialEditTextBackground"
+            android:drawableLeft="@drawable/material_edit_text_name_24dp"
+            android:drawablePadding="20dp"
+            app:met_maxCharacters="18"
+            />
+        <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            style="@style/button_login_intro"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_address"
+            android:hint="@string/registerAddress"
+            android:textSize="18sp"
+            android:inputType="text"
+            app:met_floatingLabel="highlight"
+            app:met_underlineColor="@color/materialEditTextBackground"
+            app:met_baseColor="@color/materialEditTextBackground"
+            android:drawableLeft="@drawable/material_edit_text_address_24dp"
+            android:drawablePadding="20dp"
+            app:met_maxCharacters="40"
+            />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_datetime"
+            android:hint="@string/registerDateTime"
+            android:textSize="20sp"
+            android:digits="1234567890-"
+            app:met_floatingLabel="highlight"
+            app:met_underlineColor="@color/materialEditTextBackground"
+            app:met_baseColor="@color/materialEditTextBackground"
+            android:drawableLeft="@drawable/material_edit_text_date_24dp"
+            android:drawablePadding="20dp"
+            app:met_maxCharacters="10"
             />
     </LinearLayout>
-
+    <!-- Continue register Button -->
+    <Button
+        android:id="@+id/button_register_continue"
+        android:text="@string/button_register_continue"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        style="@style/button_register_alert_builder"
+        />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
