Edit register alert form

--- a/app/src/main/res/layout/register_dialog.xml
+++ b/app/src/main/res/layout/register_dialog.xml
@@ -40,6 +40,20 @@ app:cardCornerRadius="0dp"
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/register_name_last"
+            android:hint="@string/registerNameLast"
+            android:textSize="18sp"
+            android:inputType="text"
+            app:met_floatingLabel="highlight"
+            app:met_underlineColor="@color/materialEditTextBackground"
+            app:met_baseColor="@color/materialEditTextBackground"
+            android:drawableLeft="@drawable/material_edit_text_last_name_24dp"
+            android:drawablePadding="20dp"
+            app:met_maxCharacters="18"
+            />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/register_address"
             android:hint="@string/registerAddress"
             android:textSize="18sp"
@@ -50,6 +64,21 @@ app:cardCornerRadius="0dp"
             android:drawableLeft="@drawable/material_edit_text_address_24dp"
             android:drawablePadding="20dp"
             app:met_maxCharacters="40"
+            />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_email"
+            android:hint="@string/registerEmail"
+            android:text=""
+            android:textSize="18sp"
+            android:inputType="text"
+            app:met_floatingLabel="highlight"
+            app:met_underlineColor="@color/materialEditTextBackground"
+            app:met_baseColor="@color/materialEditTextBackground"
+            android:drawableLeft="@drawable/material_edit_text_email_24dp"
+            android:drawablePadding="20dp"
+            app:met_maxCharacters="30"
             />
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
