--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="drawerMenuFagIconsColor">#00695C</color>                                           <!-- 800 teal 50 -->
     <!-- Backgrounds global -->
     <color name="drawerMenuBackgroundLayouts">#E0F2F1</color>                                       <!-- 100 teal 50 -->
+    <!-- Menu and Product Items -->
+    <color name="menu_item_background">#4DB6AC</color>                                              <!-- 300 teal 50 -->
 </resources>
